*** Changes since AVR-LibC-2.2.0:

* General:

* Improvements and additions:

  - Part of the startup code is now optional and has been moved from
    gcrt1.S to the device support lib lib<mcu>.a.  When the respective
    parts of the startup code are not wanted, a specific symbol can be
    defined so that the associated code is no more pulled in.
    o  Define symbol __init_sp to skip initialization of SP in .init2.

  - Support a new header <avr/flash.h> for better support of avr-gcc's
    named address spaces __flash and __flashx.  For example, it provides
    functions like <tt>strcpy_F</tt> and <tt>strcpy_FX</tt> that work
    the same like <tt>strcpy_P</tt> and <tt>strcpy_PF</tt> from
    <var/pgmspace.h>, but use proper address-space qualifiers.

  - Support for Compact Vector Tables has been added as #1010.
    It is provided by crt<mcu>-cvt.o.  One way to use that variant
    of the startup code is by means of avr-gcc -mcvt which is
    supported since GCC v15.

  - avr-gcc v15 and up issues a diagnostic for __int24 and __uint24 when
    -pedantic or similar options are on.  Hence __extension__ was
    added when using these types in avr/pgmspace.h.

  - common/asmdef.h used a sub-optimal definition of XJMP and XCALL (#993).
    Outcome was a sub-optimal code generation for some devices like the
    ones in avrxmega3/short-calls.

  - Improve runtime performance of free() (Request #991).

  - Support the ISR_N macro in avr/interrupt.h.  This allows to specify the
    IRQ number as an argument to the signal attribute, which is supported
    since GCC v15 PR116056.  It allows to use static functions or functions
    defined in a C++ namespace as an ISR.   It also allows to define ISR
    aliases without the penalty of an additional JMP/RJMP instruction.
    (Issue #765).

  - Support ISO/IEC TR 18037 functions rdivi, urdivi, lrdivi, ulrdivi (#999).

* Issues closed:

  - Since v2.2.0 (Issue #936), gcrt1.S defines symbols __DATA_REGION_ORIGIN__