@@ -57,6 +57,7 @@ dev_asm_sources = \
 	init_sp.S \
 	cvt_init.S \
 	flmap_init.S \
+	call_main.S \
 	ccp_write_spm.S \
 	ccp_write.S
 
