@@ -8,7 +8,10 @@
     gcrt1.S to the device support lib lib<mcu>.a.  When the respective
     parts of the startup code are not wanted, a specific symbol can be
     defined so that the associated code is no more pulled in.
-    o  Define symbol __init_sp to skip initialization of SP in .init2.
+    o  Define __init_sp to skip initialization of SP in .init2 (#1011).
+    o  Define __call_main to skip calling main and exit in .init9 (#1012).
+       main must be executed by other means, e.g. by putting it in
+       section .init9.
 
   - Support a new header <avr/flash.h> for better support of avr-gcc's
     named address spaces __flash and __flashx.  For example, it provides
